hphp/hack/test/typecheck/nonnull/accessing_static_method_of_nonnull.php.exp
WARN: File "accessing_static_method_of_nonnull.php", line 4, characters 3-9:
Value of type `dynamic` called as a function (Warn[12039])
  File "accessing_static_method_of_nonnull.php", line 3, characters 12-18:
  This expression has type `dynamic`
ERROR: File "accessing_static_method_of_nonnull.php", line 4, characters 3-4:
Was expecting a class, but got a nonnull value (Typing[4026])
